Dark mode is off. Expenses is sorted by date (pipeTransform)

--- a/src/components/add-participants-group/add-participants-group.component.html
+++ b/src/components/add-participants-group/add-participants-group.component.html
@@ -1,15 +1,15 @@
 <div class="flow-root mt-1">
-  <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+  <ul role="list" class="divide-y divide-gray-200">
       <li class="py-3 sm:py-4">
         <div class="flex items-center">
           <div class="flex-shrink-0">
             <img class="w-8 h-8 rounded-full" src="https://cdn-icons-png.flaticon.com/512/3418/3418886.png" alt="Neil image">
           </div>
           <div class="flex-1 min-w-0 ms-4">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+            <p class="text-sm font-medium text-gray-900 truncate">
               {{ user.username }}
             </p>
-            <input type="number" id="number-input" [(ngModel)]="budget" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
+            <input type="number" id="number-input" [(ngModel)]="budget" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="90210" required>
           </div>
           <div class="flex-shrink-0 min-w-0 ms-4 pt-3">
             <button (click)="addParticipant(user.id)" class="flex-1 bg-white py-2 px-6 rounded">
