--- a/src/components/new-user/new-user.component.html
+++ b/src/components/new-user/new-user.component.html
@@ -12,31 +12,31 @@
 </div>
 
 <div class="max-w-sm mx-auto ">
-  <div class="w-full mb-3 mt-2 max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+  <div class="w-full mb-3 mt-2 max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8">
     <form class="max-w-sm mx-auto" #newUser="ngForm" (ngSubmit)="createNewUser()">
       <div class="mb-3">
         <label for="username" class="block mb-2 body-font text-gray-900">Username</label>
-        <input id="username" [(ngModel)]="text" name="label" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <input id="username" [(ngModel)]="text" name="label" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
       </div>
       <div class="mb-3">
         <label for="email" class="block mb-2 body-font text-gray-900">Email</label>
-        <input id="email" [(ngModel)]="text" name="description" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <input id="email" [(ngModel)]="text" name="description" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
       </div>
       <div class="mb-3">
         <label for="quote" class="block mb-2 body-font text-gray-900">Quote</label>
-        <input id="quote" [(ngModel)]="text" name="quote" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <input id="quote" [(ngModel)]="text" name="quote" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
       </div>
       <div class="mb-3">
         <label for="password" class="block mb-2 body-font text-gray-900">Password</label>
-        <input id="password" [(ngModel)]="text" name="password" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <input id="password" [(ngModel)]="text" name="password" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
       </div>
       <div class="mb-3">
         <label for="repeatPassword" class="block mb-2 body-font text-gray-900">Repeat password</label>
-        <input id="repeatPassword" [(ngModel)]="text" name="repeatPassword" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <input id="repeatPassword" [(ngModel)]="text" name="repeatPassword" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
       </div>
       <div class="mb-3">
         <label for="imgLink" class="block mb-2 body-font text-gray-900">URL of an image</label>
-        <input id="imgLink" [(ngModel)]="text" name="imgLink" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <input id="imgLink" [(ngModel)]="text" name="imgLink" type="text" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
       </div>
 
       <div class="flex items-center justify-between mb-4">
