--- a/src/components/add-participants/add-participants.component.html
+++ b/src/components/add-participants/add-participants.component.html
@@ -1,10 +1,10 @@
-<div class="w-full mt-3 max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-  <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-black">Already in</h5>
+<div class="w-full mt-3 max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8">
+  <h5 class="text-xl font-bold leading-none text-gray-900">Already in</h5>
   <app-participants></app-participants>
 </div>
-<div class="w-full mt-2 max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+<div class="w-full mt-2 max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8">
   <div class="flex items-center justify-between mb-4">
-    <h5 class="text-xl text-center font-bold leading-none text-gray-900 dark:text-black">Participants and Monthly Budget</h5>
+    <h5 class="text-xl text-center font-bold leading-none text-gray-900">Participants and Monthly Budget</h5>
   </div>
   @if (users | async; as users ) {
   @for (item of users | async; track item.username){
