--- a/src/components/create-expense/create-expense.component.html
+++ b/src/components/create-expense/create-expense.component.html
@@ -1,49 +1,49 @@
 <div class="max-w-sm mx-auto">
-    <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
+    <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6">
       @if (group){
         @if (expense){
           <!-- <form class="max-w-sm mx-auto" [formGroup]="formGroup" (ngSubmit)="createNewExpense()"> -->
             <form class="max-w-sm mx-auto" #newExpense="ngForm" (ngSubmit)="createNewExpense()">
         <div class="grid grid-cols-1 justify-items-stretch">
           <div>
-            <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl dark:text-black">
+            <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl">
               {{group.name}}
             </h5>
-            <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{group.description}}</p>
+            <p class="text-sm font-normal text-gray-500">{{group.description}}</p>
           </div>
         </div>
 
         <div class="py-3 sm:py-4">
           <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+            <p class="text-sm font-medium text-gray-900 truncate">
               <label for="label">Label</label>
             </p>
-            <input [(ngModel)]="expense.label" type="text" id="label" name="label" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
-            <!-- <input formControlName="label" type="text" id="label" name="label" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required> -->
+            <input [(ngModel)]="expense.label" type="text" id="label" name="label" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="90210" required>
+            <!-- <input formControlName="label" type="text" id="label" name="label" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="90210" required> -->
 
           </div>
 
           <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+            <p class="text-sm font-medium text-gray-900 truncate">
               <label for="amount">Amount</label>
             </p>
-            <!--  <input formControlName="value" (change)="dispathValues()" type="number" id="amount" name="amount" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required> -->
-            <input [(ngModel)]="expense.value" [ngModelOptions]="{standalone: true}" (change)="dispathValues()" type="number" id="amount" name="amount" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
+            <!--  <input formControlName="value" (change)="dispathValues()" type="number" id="amount" name="amount" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="90210" required> -->
+            <input [(ngModel)]="expense.value" [ngModelOptions]="{standalone: true}" (change)="dispathValues()" type="number" id="amount" name="amount" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="90210" required>
           </div>
 
           <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+            <p class="text-sm font-medium text-gray-900 truncate">
               <label for="date">Date</label>
             </p>
-            <!-- <input formControlName="date" type="date" id="date" name="date" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required> -->
-             <input [(ngModel)]="expense.date" type="date" id="date" name="date" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
+            <!-- <input formControlName="date" type="date" id="date" name="date" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="90210" required> -->
+             <input [(ngModel)]="expense.date" type="date" id="date" name="date" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="90210" required>
           </div>
 
           <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+            <p class="text-sm font-medium text-gray-900 truncate">
               <label for="paid">Paid by</label>
             </p>
-            <select id="paid" name="paid" class="form-group" id="payor" required [(ngModel)]="expense.payorId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <select id="paid" name="paid" class="form-group" id="payor" required [(ngModel)]="expense.payorId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 ">
               <option *ngFor="let participant of group.participantList" [value]="participant.id">{{ participant.user.username }}</option>
             </select>
           </div>
@@ -52,21 +52,21 @@
         <div class="flex-1 min-w-0">
             <label class="inline-flex items-center cursor-pointer">
               <input checked (change)="debtOrRefund()" [(ngModel)]="expense.debtOrRefund" name="debtOrRefund" id="debtOrRefund" type="checkbox" value="" class="sr-only peer">
-              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
+              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600"></div>
               @if (toggle){
-                <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">Money transfer</span>
+                <span class="ms-3 text-sm font-medium text-gray-900 ">Money transfer</span>
               } @else if (!toggle) {
-                <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">Expense</span>
+                <span class="ms-3 text-sm font-medium text-gray-900 ">Expense</span>
               }
             </label>
         </div>
 
         <div class="py-3 sm:py-4">
-          <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+          <p class="text-sm font-medium text-gray-900 truncate ">
             @if (toggle){
-              <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">To :</span>
+              <span class="ms-3 text-sm font-medium text-gray-900 ">To :</span>
             } @else if (!toggle) {
-              <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">For : </span>
+              <span class="ms-3 text-sm font-medium text-gray-900 ">For : </span>
             }
           </p>
         </div>
@@ -78,10 +78,10 @@
                 <img class="w-8 h-8 rounded-full" src="https://cdn-icons-png.flaticon.com/512/3418/3418886.png" alt="Neil image">
               </div>
               <div class="flex-1 min-w-0 ms-4">
-                <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+                <p class="text-sm font-medium text-gray-900 truncate ">
                   {{ detail.user.username }}
                 </p>
-                <input [(ngModel)]="detail.value" [ngModelOptions]="{standalone: true}" (change)="autoComplete(detail.id)" type="number" id="uservalue" name="uservalue" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
+                <input [(ngModel)]="detail.value" [ngModelOptions]="{standalone: true}" (change)="autoComplete(detail.id)" type="number" id="uservalue" name="uservalue" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="90210" required>
               </div>
             </div>
           </div>
