--- a/src/components/group/group.component.html
+++ b/src/components/group/group.component.html
@@ -1,25 +1,25 @@
 <div class="max-w-sm mx-auto">
 @if (group$ | async ; as group){
-  <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
+  <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6">
 
     <div class="grid grid-cols-2 justify-items-stretch">
       <div>
-        <h5 class="mb-3 text-3xl font-semibold text-gray-900 md:text-xl dark:text-black">
+        <h5 class="mb-3 text-3xl font-semibold text-gray-900 md:text-xl">
           {{group.name}}
         </h5>
-        <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{group.description}}</p>
+        <p class="text-sm font-normal text-gray-500">{{group.description}}</p>
       </div>
       <div class="grid grid-rows-2 justify-content-between place-self-end">
         <div class="grid justify-start mb-2">
         <a routerLink="newexpense">
-          <svg class="w-[48px] h-[48px] text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <svg class="w-[48px] h-[48px] text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4h1.5L8 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm.75-3H7.5M11 7H6.312M17 4v6m-3-3h6"/>
           </svg>
         </a>
         </div>
         <div class="grid justify-end">
         <a (click)="showMoneyTransfert()">
-          <svg class="w-[48px] h-[48px] text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+          <svg class="w-[48px] h-[48px] text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
             <path fill-rule="evenodd" d="M12 4a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm-2.952.462c-.483.19-.868.432-1.19.71-.363.315-.638.677-.831.93l-.106.14c-.21.268-.36.418-.574.527C6.125 6.883 5.74 7 5 7a1 1 0 0 0 0 2c.364 0 .696-.022 1-.067v.41l-1.864 4.2a1.774 1.774 0 0 0 .821 2.255c.255.133.538.202.825.202h2.436a1.786 1.786 0 0 0 1.768-1.558 1.774 1.774 0 0 0-.122-.899L8 9.343V8.028c.2-.188.36-.38.495-.553.062-.079.118-.15.168-.217.185-.24.311-.406.503-.571a1.89 1.89 0 0 1 .24-.177A3.01 3.01 0 0 0 11 7.829V20H5.5a1 1 0 1 0 0 2h13a1 1 0 1 0 0-2H13V7.83a3.01 3.01 0 0 0 1.63-1.387c.206.091.373.19.514.29.31.219.532.465.811.78l.025.027.02.023v1.78l-1.864 4.2a1.774 1.774 0 0 0 .821 2.255c.255.133.538.202.825.202h2.436a1.785 1.785 0 0 0 1.768-1.558 1.773 1.773 0 0 0-.122-.899L18 9.343v-.452c.302.072.633.109 1 .109a1 1 0 1 0 0-2c-.48 0-.731-.098-.899-.2-.2-.12-.363-.293-.651-.617l-.024-.026c-.267-.3-.622-.7-1.127-1.057a5.152 5.152 0 0 0-1.355-.678 3.001 3.001 0 0 0-5.896.04Z" clip-rule="evenodd"/>
           </svg>
         </a>
@@ -57,36 +57,36 @@
 
 
   @if (expenses$ | async; as expenses){
-  <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
+  <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6">
   <app-expense-statistics [group]="group" [expenses]="expenses"></app-expense-statistics>
   </div>
 
-  <div class="p-4 mt-2 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
+  <div class="p-4 mt-2 bg-white border border-gray-200 rounded-lg shadow sm:p-6">
     <div class="flex justify-content-between">
-      <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl dark:text-black">
+      <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl">
         Monthly expenses
       </h5>
-      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"/>
       </svg>
     </div>
     <div>
     <ul class="my-4 space-y-3">
-      @for (expense of expenses; track expense.date){
+      @for (expense of expenses | orderExpensesByDate : 'asc'; track expense.date ){
         <li>
-          <a routerLink="linedetail" [queryParams]="{ id: expense.id }" class="flex items-center p-3 text-base text-black border-2 rounded-lg bg-white hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white">
+          <a routerLink="linedetail" [queryParams]="{ id: expense.id }" class="flex items-center p-3 text-base text-black border-2 rounded-lg bg-white hover:bg-gray-100 group hover:shadow">
             @if (expense.debtOrRefund == 1){
-            <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
               <path fill-rule="evenodd" d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm13.707-1.293a1 1 0 0 0-1.414-1.414L11 12.586l-1.793-1.793a1 1 0 0 0-1.414 1.414l2.5 2.5a1 1 0 0 0 1.414 0l4-4Z" clip-rule="evenodd"/>
             </svg>
             } @else {
-              <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+              <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                 <path fill-rule="evenodd" d="M18 14a1 1 0 1 0-2 0v2h-2a1 1 0 1 0 0 2h2v2a1 1 0 1 0 2 0v-2h2a1 1 0 1 0 0-2h-2v-2Z" clip-rule="evenodd"/>
                 <path fill-rule="evenodd" d="M15.026 21.534A9.994 9.994 0 0 1 12 22C6.477 22 2 17.523 2 12S6.477 2 12 2c2.51 0 4.802.924 6.558 2.45l-7.635 7.636L7.707 8.87a1 1 0 0 0-1.414 1.414l3.923 3.923a1 1 0 0 0 1.414 0l8.3-8.3A9.956 9.956 0 0 1 22 12a9.994 9.994 0 0 1-.466 3.026A2.49 2.49 0 0 0 20 14.5h-.5V14a2.5 2.5 0 0 0-5 0v.5H14a2.5 2.5 0 0 0 0 5h.5v.5c0 .578.196 1.11.526 1.534Z" clip-rule="evenodd"/>
               </svg>
             }
             <span class="flex-1 ms-3 whitespace-nowrap">{{expense.label}}</span>
-            <span class="inline-flex items-center justify-center px-2 py-0.5 ms-3 text-xs font-medium text-black bg-white rounded dark:bg-gray-700 dark:text-gray-400">{{expense.value}} &euro;</span>
+            <span class="inline-flex items-center justify-center px-2 py-0.5 ms-3 text-xs font-medium text-black bg-white rounded">{{expense.value}} &euro;</span>
           </a>
         </li>
       }
