--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="grid col-start-1 justify-center">
       @if (loggedUserBoolean){
         <button>
-      <svg (click)="back()" class="self-center w-[30px] h-[30px] text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <svg (click)="back()" class="self-center w-[30px] h-[30px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7"/>
       </svg>
         </button>
@@ -17,7 +17,7 @@
     <div class="grid col-start-5 justify-center">
       @if (loggedUserBoolean){
         <button>
-      <svg (click)="logout()" class="self-center w-[30px] h-[30px] text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <svg (click)="logout()" class="self-center w-[30px] h-[30px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12H4m12 0-4 4m4-4-4-4m3-4h2a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3h-2"/>
       </svg>
         </button>
