--- a/src/components/group/group.component.html
+++ b/src/components/group/group.component.html
@@ -4,9 +4,11 @@
 
     <div class="grid grid-cols-2 justify-items-stretch">
       <div>
-        <h5 class="mb-3 text-3xl font-semibold text-gray-900 md:text-xl">
-          {{group.name}}
-        </h5>
+        <a routerLink="modify">
+          <h5 class="mb-3 text-3xl font-semibold text-gray-900 md:text-xl">
+            {{group.name}}
+          </h5>
+        </a>
         <p class="text-sm font-normal text-gray-500">{{group.description}}</p>
       </div>
       <div class="grid grid-rows-2 justify-content-between place-self-end">
