--- a/src/components/modify-group/modify-group.component.html
+++ b/src/components/modify-group/modify-group.component.html
@@ -53,9 +53,11 @@
             </div>
 
             <div>
+              @if (group.owner.id == idUserOnline){
               <a href="#">
                 <button type="button" (click)="deleteGroup()" class="flex mx-auto mt-6 font-bold text-white bg-red-900 py-2 px-5 rounded">Delete</button>
               </a>
+              }
             </div>
 
 
