--- a/src/components/create-expense/create-expense.component.html
+++ b/src/components/create-expense/create-expense.component.html
@@ -100,6 +100,11 @@
           </div>
         </div>
       </form>
+          <div [hidden]="valid" class="alert alert-danger">
+            @for (error of errorMessage; track errorMessage){
+            <p>{{ error }}</p>
+            }
+          </div>
       }
       }
   </div>
