--- a/src/components/create-group/create-group.component.html
+++ b/src/components/create-group/create-group.component.html
@@ -20,8 +20,13 @@
 <form class="max-w-sm mx-auto" #newGroup="ngForm" (ngSubmit)="createNewGroup(newGroup.value)">
   <div class="mb-3">
     <label for="newExpenseLabelInput" class="block mb-2 body-font text-gray-900">Label</label>
-    <input id="label" [(ngModel)]="model.label" name="label" type="text" id="newExpenseLabelInput" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
+    <input id="label" required #label="ngModel" [(ngModel)]="model.label" name="label" type="text" id="newExpenseLabelInput" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
+    <div [hidden]="label.valid || label.pristine"
+         class="alert alert-danger">
+      Label is required
+    </div>
   </div>
+
   <div class="mb-3">
     <label for="newExpenseDescriptionInput" class="block mb-2 body-font text-gray-900">Quick description</label>
     <input id="description" [(ngModel)]="model.description" name="description" type="text" id="newExpenseDescriptionInput" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500">
@@ -35,6 +40,12 @@
       <button type="button" (click)="cancelCreation()" class="flex mx-auto mt-6 text-white bg-gray-900 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Cancel</button>
     </div>
   </div>
+
+  <div [hidden]="valid"
+       class="alert alert-danger">
+    Label and participants are required
+  </div>
+
 </form>
 </div>
 </div>
