Validators for modify expense and modify group (manually)

--- a/src/components/modify-expense/modify-expense.component.html
+++ b/src/components/modify-expense/modify-expense.component.html
@@ -101,6 +101,12 @@
 
 
       </form>
+
+          <div [hidden]="valid" class="alert alert-danger">
+            @for (error of errorMessage; track errorMessage){
+              <p>{{ error }}</p>
+            }
+          </div>
       }
       }
   </div>
