--- a/src/components/modify-group/modify-group.component.html
+++ b/src/components/modify-group/modify-group.component.html
@@ -65,6 +65,11 @@
 
 
         </form>
+
+        <div [hidden]="valid"
+             class="alert alert-danger">
+          Label is required
+        </div>
       }
     }
   </div>
