Goodbye async pipe => we need to test for business errors.

--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -27,18 +27,27 @@
 
 
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
-      @for (item of users ; track item.id){
+      @if (errorMessage){
         <div class="sm:w-1/2 mb-10 px-4 text-white">
           <div class="rounded-lg h-64 overflow-hidden">
-            <img alt="content" class="object-cover object-center h-full w-full" [src]="item.image">
+        <p class="leading-relaxed text-base">{{ errorMessage }}</p>
           </div>
-          <h2 class="title-font text-2xl font-medium text-white0 mt-6 mb-3">{{ item.username.toUpperCase() }}</h2>
-          <p class="leading-relaxed text-base">{{ item.quote }}</p>
-          <a routerLink="/password" routerLinkActive="active" ariaCurrentWhenActive="page">
-            <button (click)="updateUserOnline(item.id)" class="flex mx-auto mt-6 text-white bg-gray-900 border-0 py-2 px-5 rounded">This is me</button>
-          </a>
         </div>
+      } @else {
+        @for (item of users ; track item.id){
+          <div class="sm:w-1/2 mb-10 px-4 text-white">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" [src]="item.image">
+            </div>
+            <h2 class="title-font text-2xl font-medium text-white0 mt-6 mb-3">{{ item.username.toUpperCase() }}</h2>
+            <p class="leading-relaxed text-base">{{ item.quote }}</p>
+            <a routerLink="/password" routerLinkActive="active" ariaCurrentWhenActive="page">
+              <button (click)="updateUserOnline(item.id)" class="flex mx-auto mt-6 text-white bg-gray-900 border-0 py-2 px-5 rounded">This is me</button>
+            </a>
+          </div>
+        }
       }
+
     </div>
     } @placeholder (minimum 500ms){
       <div class="flex px-5 py-10 justify-items-center">
