UserTokenInterface Storage USER ID and TOKEN after THIS IS ME from login page

--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -34,9 +34,9 @@
           </div>
           <h2 class="title-font text-2xl font-medium text-white0 mt-6 mb-3">{{ item.username.toUpperCase() }}</h2>
           <p class="leading-relaxed text-base">{{ item.quote }}</p>
-          <a routerLink="/password" routerLinkActive="active" ariaCurrentWhenActive="page">
+          <!--<a routerLink="/password" routerLinkActive="active" ariaCurrentWhenActive="page">-->
             <button (click)="updateUserOnline(item.id)" class="flex mx-auto mt-6 text-white bg-gray-900 border-0 py-2 px-5 rounded">This is me</button>
-          </a>
+          <!--</a>-->
         </div>
       }
     </div>
